--- a/TraderResult/TraderResult/Views/DetailPageView.xaml
+++ b/TraderResult/TraderResult/Views/DetailPageView.xaml
@@ -4,27 +4,21 @@
              xmlns:dxg="http://schemas.devexpress.com/xamarin/2014/forms/datagrid" xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              x:Class="TraderResult.Views.DetailPageView">
 
-    <StackLayout Margin="10">
-        <yummy:PancakeView BackgroundGradientStartPoint="0,0" 
-                           BackgroundGradientEndPoint="1,0"
-                           CornerRadius="20">
-            <yummy:PancakeView.BackgroundGradientStops>
-                <yummy:GradientStopCollection>
-                    <yummy:GradientStop Color="#f5e1ce" Offset="0.1" />
-                    <yummy:GradientStop Color="#ffffff" Offset="0.9" />
-                </yummy:GradientStopCollection>
-            </yummy:PancakeView.BackgroundGradientStops>
-            
-            <StackLayout HeightRequest="300">
+    <StackLayout  Margin="25,40,25,0">
+       
+            <StackLayout HeightRequest="500">
 
-                <Label Text="Resultados Mercado MiniSp500 "
-                       Margin="10"
-                       HorizontalOptions="Center"
-                       TextDecorations="Underline"
-                       FontAttributes="Bold"
-                       FontSize="15"/>
+            <Label Text="Resultados Mercado MiniSp500 "
+                       Margin="30,65,0,0"
+                       HorizontalOptions="StartAndExpand"
+                       FontSize="19"/>
 
-                <StackLayout Margin="30">
+            <Frame HeightRequest="200"
+                   HasShadow="False"
+                   Margin="20,30,20,0"
+                   CornerRadius="20">
+                
+                <StackLayout>
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
@@ -36,6 +30,7 @@
                             <ColumnDefinition  Width="*" />
                         </Grid.ColumnDefinitions>
 
+
                         <StackLayout Grid.Row="0" Grid.Column="0">
                             <Label Text="Op Ganadas"
                                    HorizontalOptions="Center"/>
@@ -46,7 +41,8 @@
                         </StackLayout>
 
 
-                        <StackLayout Grid.Row="0" Grid.Column="1">
+                        <StackLayout Grid.Row="0" 
+                                     Grid.Column="1">
                             <Label Text="Op Perdidas"
                                    HorizontalOptions="Center"/>
                             <Frame CornerRadius="20">
@@ -55,42 +51,40 @@
                             </Frame>
                         </StackLayout>
 
-                        <StackLayout Grid.Row="1" Grid.Column="0">
+                        <StackLayout Grid.Row="1" Grid.Column="0"
+                                     Margin="0,15,0,0">
 
-                            <Label Text="Op Perdidas"
+                            <Label Text="Total:"
                                    HorizontalOptions="Center"/>
 
                             <Frame CornerRadius="20">
                                 <Label Text="{Binding Promedio}"
                                        HorizontalOptions="Center"/>
-                                
-                                
+
+
                             </Frame>
 
                         </StackLayout>
 
-                        <StackLayout Grid.Row="1" Grid.Column="1" >
+                        <StackLayout Grid.Row="1" Grid.Column="1"
+                                     Margin="0,15,0,0">
 
                             <Label Text="Total de operaciones:"
                                    HorizontalOptions="Center"/>
 
                             <Frame CornerRadius="20">
-                                <Label Text="{Binding Promedio}"
+                                <Label Text="40"
                                        HorizontalOptions="Center"/>
                             </Frame>
 
                         </StackLayout>
 
-                       
+
                     </Grid>
                 </StackLayout>
-
-                
-
-
-            </StackLayout>
+            </Frame>
             
-        </yummy:PancakeView>
+        </StackLayout>
 
     </StackLayout>
 </ContentPage>
