--- a/TraderResult/TraderResult/Views/DetailPageView.xaml
+++ b/TraderResult/TraderResult/Views/DetailPageView.xaml
@@ -1,90 +1,100 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:dxg="http://schemas.devexpress.com/xamarin/2014/forms/datagrid" xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+             xmlns:dxg="http://schemas.devexpress.com/xamarin/2014/forms/datagrid"
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              x:Class="TraderResult.Views.DetailPageView">
 
-    <StackLayout  Margin="25,40,25,0">
-       
-            <StackLayout HeightRequest="500">
+    <StackLayout  Margin="25,0,25,0">
 
-            <Label Text="Resultados Mercado MiniSp500 "
-                       Margin="30,65,0,0"
-                       HorizontalOptions="StartAndExpand"
-                       FontSize="19"/>
+        
 
-            <Frame HeightRequest="200"
-                   HasShadow="False"
-                   Margin="20,30,20,0"
+        <!--#region OpTotal -->
+        <StackLayout>
+            <Label Text="Resumen:"
+                   Margin="30,65,0,0"
+                   HorizontalOptions="StartAndExpand"
+                   FontSize="19"/>
+
+            <Frame Margin="25,15,25,0"
+                   HeightRequest="140"
+                   BackgroundColor="Beige"
                    CornerRadius="20">
-                
-                <StackLayout>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Text="Op Realizadas"
+                           Grid.Column="0"
+                           HorizontalOptions="Center"
+                           VerticalOptions="Center"
+                           FontSize="25"/>
 
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition  Width="*" />
-                        </Grid.ColumnDefinitions>
-
-
-                        <StackLayout Grid.Row="0" Grid.Column="0">
-                            <Label Text="Op Ganadas"
-                                   HorizontalOptions="Center"/>
-                            <Frame CornerRadius="20">
-                                <Label Text="{Binding CountOpGan}"
-                                       HorizontalOptions="Center"/>
-                            </Frame>
-                        </StackLayout>
-
-
-                        <StackLayout Grid.Row="0" 
-                                     Grid.Column="1">
-                            <Label Text="Op Perdidas"
-                                   HorizontalOptions="Center"/>
-                            <Frame CornerRadius="20">
-                                <Label Text="{Binding CountOpLosser}"
-                                       HorizontalOptions="Center"/>
-                            </Frame>
-                        </StackLayout>
-
-                        <StackLayout Grid.Row="1" Grid.Column="0"
-                                     Margin="0,15,0,0">
-
-                            <Label Text="Total:"
-                                   HorizontalOptions="Center"/>
-
-                            <Frame CornerRadius="20">
-                                <Label Text="{Binding Promedio}"
-                                       HorizontalOptions="Center"/>
-
-
-                            </Frame>
-
-                        </StackLayout>
-
-                        <StackLayout Grid.Row="1" Grid.Column="1"
-                                     Margin="0,15,0,0">
-
-                            <Label Text="Total de operaciones:"
-                                   HorizontalOptions="Center"/>
-
-                            <Frame CornerRadius="20">
-                                <Label Text="40"
-                                       HorizontalOptions="Center"/>
-                            </Frame>
-
-                        </StackLayout>
-
-
-                    </Grid>
-                </StackLayout>
+                    <Label Text="45"
+                           Grid.Column="1"
+                           HorizontalOptions="Center"
+                           VerticalOptions="Center"
+                           FontSize="40"/>
+                </Grid>
             </Frame>
-            
-        </StackLayout>
+        </StackLayout><!--#endregion-->
+        <!--#region Indicadores -->
+        <StackLayout Margin="27,10,26,0"
+                     >
+            <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
+                    <Label Text="Ganadas:"
+                           Grid.Row="0"
+                           Grid.Column="0"/>
+
+                    <Label Text="0"
+                           Grid.Row="0"
+                           Grid.Column="1"/>
+
+                    <Label Text="Perdidas:"
+                           Grid.Row="0"
+                           Grid.Column="2"
+                           HorizontalOptions="Center"/>
+
+                    <Label Text="45"
+                           Grid.Row="0"
+                           Grid.Column="3"
+                           HorizontalOptions="CenterAndExpand"/>
+
+                    <Label Text="Promedio"
+                           Grid.Row="1"
+                           Grid.Column="0"/>
+
+                    <Label Text="1.56"
+                           Grid.Row="1"
+                           Grid.Column="1"/>
+
+                    <Label Text="Ratio Ga:"
+                           Grid.Row="1"
+                           Grid.Column="2"
+                           HorizontalOptions="CenterAndExpand"/>
+
+                    <Label Text="1.56"
+                           Grid.Row="1"
+                           Grid.Column="3"
+                           HorizontalOptions="Center"/>
+
+
+                </Grid>
+
+        </StackLayout>
+        <!--#endregion-->
+       
     </StackLayout>
 </ContentPage>
