--- a/TraderResult/TraderResult/Views/InitialPage.xaml
+++ b/TraderResult/TraderResult/Views/InitialPage.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:TraderResult.Views"
              x:Class="TraderResult.Views.InitialPage"
              BarTextColor="White"
-             BarBackgroundColor="#495371"
+             BarBackgroundColor="White"
             >
   <!--Pages can be added as references or inline-->
 
